src/objects/Client_Household__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Adults__c</fullName>
        <label>Adults</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Children__c</fullName>
        <label>Children</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Names__c</fullName>
        <defaultValue>&quot;New Client&quot;</defaultValue>
        <description>When you add or remove a household member, a trigger fills this field with a list of the names of all the household members.</description>
        <inlineHelpText>When you add or remove a household member, a trigger fills this field with a list of the names of all the household members.</inlineHelpText>
        <label>Client Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commodity_Usage_JSON__c</fullName>
        <inlineHelpText>JSON data that records the total usage of commodities in the month of the most recent visit.</inlineHelpText>
        <label>Commodity Usage JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Points_Remaining__c</fullName>
        <description>Total points remaining in the month of the most recent visit.</description>
        <formula>Monthly_Points_Available__c - Current_Points_Used__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total points remaining in the month of the most recent visit.</inlineHelpText>
        <label>Current Points Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Points_Used__c</fullName>
        <description>Total number of points used in month of most recent visit.</description>
        <inlineHelpText>Total number of points used in month of most recent visit.</inlineHelpText>
        <label>Current Points Used</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Visit__c</fullName>
        <label>First Visit</label>
        <summarizedField>Client_Visit__c.Visit_Date__c</summarizedField>
        <summaryForeignKey>Client_Visit__c.Household__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Full_Address__c</fullName>
        <formula>TRIM( Address__c + IF(ISBLANK(City__c), &apos;&apos;, &apos;, &apos; + City__c) + IF(ISBLANK(State__c), &apos;&apos;, &apos;, &apos; + State__c) + &apos; &apos; + Postal_Code__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Homeless__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Homeless</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Infant_Card_Expires__c</fullName>
        <label>Infant Card Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Infants__c</fullName>
        <label>Infants</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Points_Available__c</fullName>
        <inlineHelpText>Number of points allowed per month, set automatically based on food bank settings.</inlineHelpText>
        <label>Monthly Points Available</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Visit__c</fullName>
        <label>Most Recent Visit</label>
        <summarizedField>Client_Visit__c.Visit_Date__c</summarizedField>
        <summaryForeignKey>Client_Visit__c.Household__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_Cook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Cook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proof_of_Address_Date__c</fullName>
        <label>Proof of Address Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proof_of_Address__c</fullName>
        <inlineHelpText>Type of address proof provided and/or initials of user who verified the address</inlineHelpText>
        <label>Proof of Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seniors__c</fullName>
        <label>Seniors</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred by agency (identify in Notes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred by individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper, radio, TV, internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doesn&apos;t know or won&apos;t say</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Identify in Notes)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Special_Diet__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicate dietary restrictions in notes field.</inlineHelpText>
        <label>Special Diet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Staff_Notes__c</fullName>
        <label>Staff Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <picklist>
            <picklistValues>
                <fullName>No Cook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Diet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnamese</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Total_Visits__c</fullName>
        <label>Total Visits</label>
        <summaryForeignKey>Client_Visit__c.Household__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Client Household</label>
    <listViews>
        <fullName>Active</fullName>
        <columns>NAME</columns>
        <columns>Client_Names__c</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>First_Visit__c</columns>
        <columns>Most_Recent_Visit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inactive__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Active Households</label>
    </listViews>
    <listViews>
        <fullName>AllHH</fullName>
        <columns>NAME</columns>
        <columns>Client_Names__c</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>First_Visit__c</columns>
        <columns>Most_Recent_Visit__c</columns>
        <columns>Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Households</label>
    </listViews>
    <nameField>
        <displayFormat>HH-{000000}</displayFormat>
        <label>Household ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Households</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>